--- a/Html_Basics/Version_01/css/styles.css
+++ b/Html_Basics/Version_01/css/styles.css
@@ -1,7 +1,9 @@
 body {
-    color : #703421;
+    color : #AAFFAA;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #636363;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 p {
@@ -15,6 +17,7 @@ h1 {
     color : #231223;
     border : solid 3px #242424;
     background-color: #AADD34;
+    text-align : center;
 }
 
 
@@ -24,6 +27,11 @@ hr {
 }
 img {
     border:8px dotted #FF3278;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+
+
 }
 
 #today {
@@ -34,4 +42,16 @@ img {
 
 ol {
     list-style-type: upper-roman;
+}
+input {
+    width: 100%;
+    padding: 12px;
+    margin: 10px 0;
+    box-sizing: border-box;
+}
+#checkbox {
+    width : 10%;
+    padding: 12px;
+    margin: 10px 0;
+    box-sizing: border-box;
 }
