--- a/Html_Basics/mini_project_02/version_01/css/styles.css
+++ b/Html_Basics/mini_project_02/version_01/css/styles.css
@@ -1,10 +1,11 @@
 .container {
     display: flex;
     justify-content: left;
-    align-items: center;
     text-align: left;
     flex-direction: column;
     border: solid 1px red;
+    font-family:Arial,Helvetica,sans-serif;
+    margin-left:30px;
 }
 
 .nav{
@@ -18,4 +19,51 @@
 .topbar {
     border :solid 1px lime;
     width:50%;
+}
+
+a {
+    color:#000000;/* color of text */
+    font-size:30px; /* size of text */
+    text-decoration: none; /*  removes underline from hyperlink */
+    background-color: #D9D9D9; /* background color for webpage */
+    font-weight: bold;
+    letter-spacing: 3px;
+    margin-right:15px;
+
+}
+
+input::placeholder{
+    color:#1A5746;
+
+}
+
+input {
+    background-color:#40DAAE ;
+    color:#1A5746;
+    width: 30%; /* how far the input spreads across the page */
+    padding:10px;
+    margin-bottom:20px;
+
+}
+
+a:hover{
+    color:#FF2356;/* color of text */
+
+}
+
+body {
+    background-color:#9A30AF ;
+
+}
+
+h1 {
+    color:#3A3538;
+    font-size: 70px;
+    background-color:#842A93;
+
+
+}
+
+#checkbox {
+    width:6%;
 }
