booking now can cancle and view

--- a/Html_Basics/mini_project_03_v3/css/styles.css
+++ b/Html_Basics/mini_project_03_v3/css/styles.css
@@ -111,6 +111,18 @@ input{
     color: red; /* setting colour of text */
 
 }
+table {
+    border-collapse: collapse;
+    padding: 8px;
+    justify-content: center;
+    display: flex;
+    margin:auto;
+    width:auto;
+}
+td{
+    border: 2px solid black;
+    padding:6px;
+}
 
 
 
